fix spacing issues regarding hero sitewide

--- a/pattern-lab/source/_patterns/03-components/blog-teaser/_blog-teaser.scss
+++ b/pattern-lab/source/_patterns/03-components/blog-teaser/_blog-teaser.scss
@@ -64,11 +64,11 @@
   &__content {
     padding: $spacing--l;
 
-    @include breakpoint($bp) {
+    @include breakpoint($bp--large) {
       padding: $spacing--xxxl;
     }
     @include breakpoint($bp--xxlarge) {
-      padding: 2* $spacing--xxxl;
+      padding: 4* $spacing--xl;
     }
   }
 
